# tlm

./: .gitignore  AGENTS.md  AGENT_PLAN.md  AGENT_TODO.md  AI_INIT.md  CHANGELOG.md  CODE_INDEX.md  Describe_Here.md  INIT.md  LICENSE  README.md  VERSION  prompt.md  pyproject.toml  requirements.txt  sandbox.py  tlm.code-workspace
.cursor/plans/: tlm_0.2.0-beta_prep_8b806f9f.plan.md  tlm_full_implementation_plan_39835393.plan.md
.github/workflows/: ci.yml  release.yml
docs/: documentation.md  install.md  sessions-and-memory.md  tlm.1
packaging/: build_zipapp.sh
packaging/linux/aur/: PKGBUILD
packaging/linux/deb/: README.md  stdeb.cfg
packaging/macos/homebrew/Formula/: tlm.rb
packaging/windows/scoop/: tlm.json
packaging/windows/winget/: manifest.yaml
sandbox/: README.md
scripts/: install.ps1  install.sh  update-from-clone.sh
src/tlm/: __init__.py  __main__.py  _version.py  ask_tools.py  cli.py  completion.py  config.py  harvest.py  jsonutil.py  memory.py  self_update.py  session.py  sessions_tui.py  settings.py  setup_wizard.py  tui_config.py
src/tlm/gui/: __init__.py  app.py  app_fltk.py  availability.py  dispatch.py
src/tlm/modes/: __init__.py  do.py  write.py
src/tlm/providers/: __init__.py  base.py  openai_compat.py  registry.py  stub.py
src/tlm/safety/: __init__.py  consent.py  gate.py  jail.py  permissions.py  profiles.py  root_guard.py  sandbox.py  shell.py
src/tlm/telemetry/: __init__.py  log.py  prices.py
src/tlm/web/: __init__.py  brave_search_api.py  lightpanda.py  lightpanda_release.py  runner.py
tests/: test_ask_context_handling.py  test_ask_memory.py  test_ask_tools.py  test_cli_smoke.py  test_escape_consent_unit.py  test_freelist_cli.py  test_gui.py  test_gui_dispatch.py  test_harvest_unit.py  test_jail_unit.py  test_jsonutil.py  test_lightpanda_release.py  test_lightpanda_web.py  test_log_redaction.py  test_memory.py  test_models_fetch.py  test_permissions_unit.py  test_root_guard_unit.py  test_safety.py  test_sandbox_script.py  test_sandbox_unit.py  test_self_update.py  test_session.py  test_session_keyword.py  test_setup_wizard.py  test_web_runner.py
