[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tlm"
version = "1.1.0"
description = "Linux terminal CLI for LLM Q&A, guarded code write/run, and Tk config UI."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
tlm = "tlm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
