[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tlm"
version = "0.2.0.dev5"
description = "Linux terminal CLI for LLM Q&A, guarded code write/run, and Tk/FLTK config UI."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "packaging>=24.0",
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
usage = ["tiktoken>=0.7"]
gui-fltk = ["pyfltk>=1.4,<2"]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.10", "pip-audit>=2.7"]
secure = ["keyring>=25.0"]

[project.scripts]
tlm = "tlm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-include = ["sandbox.py"]

[tool.mypy]
python_version = "3.11"
packages = ["tlm"]
ignore_missing_imports = true
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "gui: needs working tkinter (and usually DISPLAY or Xvfb)",
]
